--- a/resume.html
+++ b/resume.html
@@ -3,5 +3,39 @@
     <title>Your Name Resume</title>
   </head>
   <body>
+      <!--I built this myself!-->
+      <h1>Adam Hudacek</h1>
+        <p><strong>Arts, Culture, & Entertainment Journalist</strong></p>
+      <img src="resume_profile_photo.jpeg" alt="A photo of me, at Herengracht in Amsterdam" width="300">
+      <div id="contact">
+          <p><a href=mailto:adamhudacek1@gmail.com>adamhudacek1@gmail.com</a><br>LinkedIn: <a href="https://www.linkedin.com/in/adam-hudacek-821501230/" target=_blank>https://www.linkedin.com/in/adam-hudacek-821501230/</a><br>Twitter/X: <a href=https://twitter.com/AdamHudacek1 target=_blank>https://twitter.com/AdamHudacek1</a><br>GitHub: <a href=https://github.com/adamhudacek target=_blank>https://github.com/adamhudacek</a></p>
+      </div>
+        <h2>Experience</h2>
+        <h3>Diversions Staff Writer</h3>
+        <h4>The Diamondback</h4>
+        <h5>Aug. 2023 - Present</h5>
+            <p>Pitches 2 stories each week on arts, culture, & entertainment in and around the University of Maryland, College Park, with at least one reported per week. Interviews students, faculty, and members of the public in the College Park and Washington D.C. areas while writing under deadline and working with editors in a 100+ person newsroom to finalize stories. Covers live entertainment events, specifically concerts and music festivals, and has experience interviewing musicians and artists in one-on-one environments.</p>
+        <h3>Washington D.C. Beat Reporter</h3>
+        <h4>JOUR320</h4>
+        <h5>Aug. 2023 - Dec. 2023</h5>
+            <p>Responsible for covering news stories on crime, business, local government, and more within Washington D.C. in a variety of writing styles and mediums. Found stories, immersed myself in the culture of the District, and made connections with local leaders, representatives, and community advocates.</p>
+        <h3>Congressional Intern</h3>
+        <h4>Congressman Ruppersberger's District Office</h4>
+        <h5>Aug. 2021 - May 2022</h5>
+            <p>Worked to solve constituent requests with caseworkers, responded to written communications, and worked with constituents over the phone. Organized written communications for the Congressman and drafted letters and releases from the office.</p>
+        <h2>Education</h2>
+            <ul>
+                <li>Bachelor of Arts, Journalism and Cinema & Media Studies, The University of Maryland, 2026</li>
+      </ul>
+        <h2>Skills</h2>
+            <ul>
+                <li>Proficient in Microsoft Suite products</li>
+                <li>Experience with HTML, CSS, R and Python </li>
+                <li>7 years of Spanish language education</li>
+                <li>Photo editing with Adobe Lightroom and Photoshop</li>
+                <li>Photojournalism in staged and active environments</li>
+                <li>News writing for print, online and social media</li>
+      </ul>
+      <p><a href=#contact>Contact Me</a></p>
   </body>
 </html>
