--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
         <p><strong>Arts, Culture, & Entertainment Journalist</strong></p>
       <img src="resume_profile_photo.jpeg" alt="A photo of me, at Herengracht in Amsterdam" width="300">
       <div id="contact">
-          <p><a href=mailto:adamhudacek1@gmail.com>adamhudacek1@gmail.com</a><br>LinkedIn: <a href="https://www.linkedin.com/in/adam-hudacek-821501230/" target=_blank>https://www.linkedin.com/in/adam-hudacek-821501230/</a><br>Twitter/X: <a href=https://twitter.com/AdamHudacek1 target=_blank>https://twitter.com/AdamHudacek1</a><br>GitHub: <a href=https://github.com/adamhudacek target=_blank>https://github.com/adamhudacek</a></p>
+          <p><a href=mailto:adamhudacek1@gmail.com>adamhudacek1@gmail.com</a><br>LinkedIn: <a href="https://www.linkedin.com/in/adam-hudacek-821501230/" target=_blank>Here</a><br>Twitter/X: <a href=https://twitter.com/AdamHudacek1 target=_blank>Here</a><br>GitHub: <a href=https://github.com/adamhudacek target=_blank>Here</a></p>
       </div>
         <h2>Experience</h2>
         <h3>Diversions Staff Writer</h3>
