--- a/button-assignment/button-assignment-index.html
+++ b/button-assignment/button-assignment-index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Adam Hudacek</h1>
     <h2>Student Journalist</h2>
-    <button>Contact Me</button>
+    <button class="red-button">Contact Me</button>
 </body>
     
 </html>
