had to update code to reflect new file names

--- a/button-assignment/index.html
+++ b/button-assignment/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>    
     <title>Adam Hudacek Button</title>
-    <link href="button-assignment-style.css" rel='stylesheet'>
+    <link href="style.css" rel='stylesheet'>
 </head>
     
 <body>
