--- a/online-portolio/index.html
+++ b/online-portolio/index.html
@@ -4,12 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width-device-width, initial-scale=1" />
         <title>Adam Hudacek Portfolio</title>
-        <link href="style.css" rel="stylesheet" />
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
+        
+        <link href="style.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Suranna&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
