--- a/online-portolio/index.html
+++ b/online-portolio/index.html
@@ -9,39 +9,127 @@
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
-        
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Suranna&display=swap"
+            rel="stylesheet" />
         <link href="style.css" rel="stylesheet" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Suranna&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="container-fluid">
+        <br />
+        <div class="container-fluid" id="intro">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3" id="idphoto">
                     <img src="resume_profile_photo%20copy.jpeg" />
                 </div>
 
-                <div class="col-sm-8">
+                <div class="col-sm-9" id="bio">
                     <h1>Adam Hudacek</h1>
-                    <h2>Student Journalist</h2>
-                    <button>Hire Me</button>
+                    <h5>STUDENT JOURNALIST</h5>
+                    <div class="container">
+                        <div class="center" id="buttonthing">
+                            <button><a href=mailto:adamhudacek1@gmail.com>Get in Touch</a></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <br />
+        <div class="container-fluid" id="navigation">
             <div class="row">
                 <div class="col-sm-4">
-                    <h8>Experience</h8>
+                    <h8><a href="#experience">Experience</a></h8>
                 </div>
                 <div class="col-sm-4">
-                    <h8>Skills</h8>
+                    <h8><a href="#skills">Skills</a></h8>
                 </div>
                 <div class="col-sm-4">
-                    <h8>Education</h8>
+                    <h8><a href="#education">Education</a></h8>
                 </div>
             </div>
         </div>
-             
+        <br />
+        <div class="container-fluid" id="sections">
+            <div class="row">
+                <div class="col">
+                    <h6 id="experience">Experience</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p1>Diversions Staff Writer</p1>
+                    <br />
+                    <p2>The Diamondback</p2>
+                    <br />
+                    <p3>August 2023 - Present</p3>
+                </div>
+                <div class="col-sm-9">
+                    <p4
+                        >- Pitches 2 stories each week on arts, culture, and
+                        entertainment in and around the UMD with at least one
+                        reported per week. Interviews students, faculty, and
+                        members of the public while writing under deadline and
+                        working with editors in a 100+ person newsroom.</p4
+                    >
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p1>Washington D.C. Reporter</p1>
+                    <br />
+                    <p2>JOUR320</p2>
+                    <br />
+                    <p3>August 2023 - December 2023</p3>
+                </div>
+                <div class="col-sm-9">
+                    <p4
+                        >- Responsible for covering news stories on crime,
+                        business, local government, and more within Washington
+                        D.C. in a variety of writing styles and mediums. Found
+                        stories, immersed myself in the culture of the District,
+                        and made connections with local leaders,
+                        representatives, and community advocates.</p4
+                    >
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p1>Intern</p1>
+                    <br />
+                    <p2>Congressman Ruppersberger’s District Office</p2>
+                    <br />
+                    <p3>September 2021- May 2022</p3>
+                </div>
+                <div class="col-sm-9">
+                    <p4
+                        >- Worked to solve constituent requests with
+                        caseworkers, responded to written communications, and
+                        worked with constituents over the phone. Organized
+                        written communications for the Congressman and drafted
+                        letters and releases from the office.</p4
+                    >
+                </div>
+            </div>
+            <br />
+            <div class="row">
+                <div class="col">
+                    <h6 id="skills">Skills</h6>
+                </div>
+            </div>
+            <br />
+            <div class="row">
+                <div class="col">
+                    <h6 id="education">Education</h6>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid" id="copyright">
+            <div class="row">
+                <div class="col">
+                    <h8>Adam Hudacek, Copyright 2024</h8>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
