--- a/online-portolio/index.html
+++ b/online-portolio/index.html
@@ -29,7 +29,11 @@
                     <h5>STUDENT JOURNALIST</h5>
                     <div class="container">
                         <div class="center" id="buttonthing">
-                            <button><a href=mailto:adamhudacek1@gmail.com>Get in Touch</a></button>
+                            <button>
+                                <a href="mailto:adamhudacek1@gmail.com"
+                                    >Get in Touch</a
+                                >
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -53,7 +57,7 @@
         <div class="container-fluid" id="sections">
             <div class="row">
                 <div class="col">
-                    <h6 id="experience">Experience</h6>
+                    <h4 id="experience">Experience</h4>
                 </div>
             </div>
             <div class="row">
@@ -113,14 +117,30 @@
             </div>
             <br />
             <div class="row">
-                <div class="col">
-                    <h6 id="skills">Skills</h6>
+                <div class="col-sm">
+                    <h4 id="skills">Skills</h4>
+                    <ul>
+                        <li>Proficient in Microsoft Suite products</li>
+                        <li>Experience with HTML, CSS, R and Python</li>
+                        <li>7 years of Spanish language education</li>
+                        <li>
+                            Photo editing with Adobe Lightroom and Photoshop
+                        </li>
+                        <li>
+                            Photojournalism in staged and active environments
+                        </li>
+                        <li>News writing for print, online and social media</li>
+                    </ul>
                 </div>
             </div>
             <br />
             <div class="row">
                 <div class="col">
-                    <h6 id="education">Education</h6>
+                    <h4 id="education">Education</h4>
+                    <p1>Bachelor of Arts, Journalism + Cinema and Media Studies</p1>
+                    <br />
+                    <p3>The University of Maryland, College Park</p3>
+                    <p6>2026</p6>
                 </div>
             </div>
         </div>
