--- a/online-portolio/index.html
+++ b/online-portolio/index.html
@@ -21,7 +21,7 @@
         <div class="container-fluid" id="intro">
             <div class="row">
                 <div class="col-sm-3" id="idphoto">
-                    <img src="resume_profile_photo%20copy.jpeg" />
+                    <img src="resume_profile_photo%20copy.jpeg" alt="Adam Hudacek, Herengracht Canal, Amsterdam, Jan. 2024"/>
                 </div>
 
                 <div class="col-sm-9" id="bio">
@@ -137,7 +137,10 @@
             <div class="row">
                 <div class="col">
                     <h4 id="education">Education</h4>
-                    <p1>Bachelor of Arts, Journalism + Cinema and Media Studies</p1>
+                    <p1
+                        >Bachelor of Arts, Journalism + Cinema and Media
+                        Studies</p1
+                    >
                     <br />
                     <p3>The University of Maryland, College Park</p3>
                     <p6>2026</p6>
