updated the jawn

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -11,13 +11,20 @@
             crossorigin="anonymous" />
 
         <link href="style.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Suranna&display=swap"
+            rel="stylesheet" />
     </head>
 
     <body>
         <div class="container-fluid" id="topper">
             <div class="row">
                 <div class="col">
-                    <img src="headphotoskyline.jpeg" />
+                    <img
+                        src="headphotoskyline.jpeg"
+                        alt="Fog rolls over San Francisco at night." />
                     <h1>The Elusive Future of San Francisco’s Fog</h1>
                     <h6>Written by John Branch - Photos by Nina Riggio</h6>
                     <h6>The New York Times - Sept. 14, 2022</h6>
@@ -83,7 +90,9 @@
                         fog horns went unused, for now.
                     </p>
 
-                    <img src="dziermanonbridge.jpeg" />
+                    <img
+                        src="dziermanonbridge.jpeg"
+                        alt="Chris Dzierman stands on the Golden Gate Bridge." />
                     <p class="caption">
                         Chris Dzierman, chief bridge painter and expert on the
                         fog’s chilling and corrosive effects.
@@ -131,6 +140,12 @@
                         might even be an untapped resource in California’s
                         growing anxiety over water.
                     </p>
+                    <p>
+                        Which is why a decrease in California’s coastal fog, or
+                        the prospect of it disappearing entirely one day, is not
+                        a sunny proposition, particularly in and around San
+                        Francisco Bay.
+                    </p>
                     <iframe
                         frameborder="0"
                         class="juxtapose"
@@ -140,12 +155,6 @@
                     <p class="caption">
                         San Francisco skyline before and after the fog rolls in.
                         - Photos by Simon Christen
-                    </p>
-                    <p>
-                        Which is why a decrease in California’s coastal fog, or
-                        the prospect of it disappearing entirely one day, is not
-                        a sunny proposition, particularly in and around San
-                        Francisco Bay.
                     </p>
                     <p>
                         The general consensus among the small cadre of
@@ -184,9 +193,12 @@
                     </h3>
                     <p class="quote">- Chris Dzierman</p>
                     <hr />
-                    <img src="guywithnet.jpeg" />
+                    <img
+                        src="guywithnet.jpeg"
+                        alt="A man carries a fog-catching net across a field." />
                     <p class="caption">
-                        Fog catchers have become increasingly common in the region.
+                        Fog catchers have become increasingly common in the
+                        region.
                     </p>
                     <p>
                         Early on a late-spring morning, Peter Weiss, a scientist
@@ -228,7 +240,9 @@
                         the tallest trees in the world, California’s coastal
                         redwoods, survive.
                     </p>
-                    <img src="fogcatchers.jpeg" />
+                    <img
+                        src="fogcatchers.jpeg"
+                        alt="Scientists examine a fog catcher machine." />
                     <p class="caption">
                         A successful fog catcher might collect a liter of water
                         overnight.
@@ -341,7 +355,9 @@
                         concoct variations. What works in a lab does not always
                         work in nature.
                     </p>
-                    <img src="wetweb.jpeg" />
+                    <img
+                        src="wetweb.jpeg"
+                        alt="Water droplets caught in a spider's web." />
                     <p class="caption">
                         A successful fog catcher might collect a liter of water
                         overnight.
@@ -373,9 +389,12 @@
                         found in sunnier spots. That depends on many factors,
                         not least the future existence of fog.
                     </p>
-                    <img src="orangesky.jpeg" />
+                    <img
+                        src="orangesky.jpeg"
+                        alt="Sunlight glows orange over a San Francisco neighborhood." />
                     <p class="caption">
-                        San Francisco's fog culture is ingrained within its neighborhoods.
+                        San Francisco's fog culture is ingrained within its
+                        neighborhoods.
                     </p>
                     <p>
                         There may be no place with a deeper connection to fog
@@ -421,6 +440,7 @@
                         "This is my town,” it responded to a follower recently.
                         “You’re just living in it.”
                     </p>
+                    <br/>
                 </div>
             </div>
         </div>
