--- a/final-project/index.html
+++ b/final-project/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid" id="body">
+        <div class="container-fluid" id="body1">
             <div class="row">
                 <div class="col">
                     <p>
@@ -131,6 +131,12 @@
                         coolest of any major city in the continental United
                         States.
                     </p>
+                    <hr />
+                    <h3 class="quote">
+                        "It's fog. It's got a mind of its own.""
+                    </h3>
+                    <p class="quote">- Chris Dzierman</p>
+                    <hr />
                     <p>
                         Fog is a companion, part of the rhythm of summertime,
                         flitting in and out of lives like a family member. But
@@ -187,19 +193,28 @@
                         It arrives like a whisper and disappears like a magic
                         trick. It is there one moment and gone the next.
                     </p>
-                    <hr />
-                    <h3 class="quote">
-                        "It's fog. It's got a mind of its own.""
-                    </h3>
-                    <p class="quote">- Chris Dzierman</p>
-                    <hr />
-                    <img
+                                    </div>
+            </div>
+        </div>
+       <div class="container-fluid" id="midpic">
+            <div class="row">
+                <div class="col">
+                                        <img
                         src="guywithnet.jpeg"
                         alt="A man carries a fog-catching net across a field." />
                     <p class="caption">
                         Fog catchers have become increasingly common in the
                         region.
                     </p>
+                </div>
+           </div>
+        </div>
+        <div class="container-fluid" id="body2">
+            <div class="row">
+                <div class="col">
+                  
+                    <h2>The Future of Fog: What's the Catch?</h2>
+                    <br/>
                     <p>
                         Early on a late-spring morning, Peter Weiss, a scientist
                         at the University of California, Santa Cruz, and three
